Apply checkstyle rules