@@ -1,23 +1,20 @@
+package org.apache.myfaces.tobago.el;
+
 /*
  * Copyright 2002-2005 The Apache Software Foundation.
- * 
- *    Licensed under the Apache License, Version 2.0 (the "License");
- *    you may not use this file except in compliance with the License.
- *    You may obtain a copy of the License at
- * 
- *        http://www.apache.org/licenses/LICENSE-2.0
- * 
- *    Unless required by applicable law or agreed to in writing, software
- *    distributed under the License is distributed on an "AS IS" BASIS,
- *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *    See the License for the specific language governing permissions and
- *    limitations under the License.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
-/*
- * Created 20.10.2004 11:38:48.
- * $Id$
- */
-package org.apache.myfaces.tobago.el;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -58,9 +55,9 @@ public class UserWrapper {
       FacesContext facesContext = FacesContext.getCurrentInstance();
       boolean inRole = facesContext.getExternalContext().isUserInRole(role);
       if (LOG.isDebugEnabled()) {
-        LOG.debug("is in role '"+ key + "': " + inRole);
+        LOG.debug("is in role '" + key + "': " + inRole);
       }
-      return new Boolean(inRole);
+      return Boolean.valueOf(inRole);
     }
 
     public int size() {
@@ -107,5 +104,4 @@ public class UserWrapper {
       throw new UnsupportedOperationException();
     }
   }
-
 }
